[package]
name = "program"
version = "0.1.0"
edition = "2021"

[workspace]

[net]
git-fetch-with-cli = true

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
anyhow = "1.0.82"
serde_json = "1.0.108"
borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], default-features = false  }
bitcoin-arch = { git = "https://github.com/Arch-Network/bitcoin-arch.git" }
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"] }